# quevidkit

./: .gitignore  README.md  pyproject.toml  que-science.md
docs/: app.js  index.html  styles.css
docs/lib/: checks.js  mp4-parser.js  report.js  scoring.js  ui.js
src/quevidkit/: __init__.py  cli.py  ffprobe_utils.py  models.py  pipeline.py  reporting.py  scoring.py  webapp.py
src/quevidkit/static/: app.js  styles.css
src/quevidkit/templates/: index.html
tests/: test_options.py  test_scoring.py  test_session_keys.py  test_webapp_api.py
